# webinar-march

./: .gitignore  README.md  pyproject.toml
.github/scripts/: check_missing_tests.py
.github/workflows/: cursor-missing-tests.yml  cursor-readme-docs.yml
app/: calculator.py
tests/: test_calculator.py
