[project]
name = "webinar-march"
version = "0.1.0"
description = "CLI calculator that evaluates arithmetic without eval() or exec()"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
calculator = "app.calculator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
